r9456@elsa:  leviticus | 2009-11-03 22:26:20 +0100  Removed MemoryCache/CacheBase. Should fix bug #16208.